--- a/css/styles.css
+++ b/css/styles.css
@@ -311,7 +311,9 @@ background-color: #F5F4FA;;
 box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
     background: #FFFFFF;
+   
     }
+   
 
 
 .img-team :last-child {
@@ -339,6 +341,24 @@ font-family: 'Roboto';
     letter-spacing: 0.03em;
     margin-bottom: 30px;
 }
+.icons-team-div{
+ 
+}
+
+.icons-team-ul{
+display: flex;
+    justify-content: center;}
+    .icons-team-li{
+margin-right: 20px;
+}
+
+
+
+
+
+
+
+/* footer */
 .footer{
     background-color: var(--background-color);
     padding: 60px 0;
