--- a/css/styles.css
+++ b/css/styles.css
@@ -396,7 +396,51 @@ margin-right: 10px;
     fill: var(--accent-color);
     }
 
-  
+    
+   /* section-permanent-clients */
+
+
+
+.header-permanent-clients {
+    font-family: 'Roboto';
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.16;
+    text-align: center;
+    color: var(--header-color);
+    margin-bottom: 50px;  
+}
+
+   .ul-permanent-clients {
+    display: flex;
+    min-height: 92px;
+    align-items: center;
+    justify-content: center;
+}
+
+.li-permanent-clients {
+      border-radius: 4px;
+  outline: 1px solid var(--accent-color);
+  color: var(--accent-color);
+  background-color: yellow;
+}
+.li-permanent-clients :hover,
+.li-permanent-clients :focus {
+    fill: var(--brand-color);
+    outline: 1px solid var(--brand-color);
+}
+
+
+.li-permanent-clients:not(:last-child)  {
+margin-right: 30px;
+}
+
+
+   .a-permanent-clients {
+    fill: var(--accent-color);
+   
+   }
+
 
    
 
