--- a/css/styles.css
+++ b/css/styles.css
@@ -168,9 +168,6 @@ p {
     color: var(--brand-color);
 }
 .hero{
-    background-color: var(--background-color);
-    padding-top: 200px;
-    padding-bottom: 200px;
    
 
 }
@@ -187,9 +184,26 @@ p {
         text-align: center;
         text-transform: uppercase;
         color: var(--text-background);
-        
-       
 }
+
+.hero {
+    width: 1600px;
+    height: 600px;
+    margin-right: auto;
+    margin-left: auto;
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4)),
+    url(../images/img-backgrouund-odapt.jpg);
+    background-color: var(--background-color);
+    background-position: center;
+    background-size: cover;
+    padding-top: 200px;
+    padding-bottom: 200px;
+    background-repeat: no-repeat;
+
+   
+
+}
+
 .btn-hero{
         font-family: 'Roboto';
         font-weight: 700;
@@ -209,20 +223,23 @@ p {
          padding-right: 32px;
          padding-left: 32px;
         }
-        .mission-to-hide {
-                    position: absolute;
-                    width: 1px;
-                    height: 1px;
-                    margin: -1px;
-                    padding: 0;
-                    overflow: hidden;
-                    border: 0;
-                    clip: rect(0 0 0 0);
-        }
+       
 
 
 
         /* section our-mission */
+
+        .mission-to-hide {
+            position: absolute;
+            width: 1px;
+            height: 1px;
+            margin: -1px;
+            padding: 0;
+            overflow: hidden;
+            border: 0;
+            clip: rect(0 0 0 0);
+}
+
 .our-mission {
     padding: 94px 94px;
 }
