--- a/css/styles.css
+++ b/css/styles.css
@@ -471,8 +471,64 @@ margin-right: 30px;
 .footer{
     background-color: var(--background-color);
     padding: 60px 0;
-
 }
+.footer .container {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: baseline;
+  }
+
+  .box-footer {
+    width: 270px;
+    margin-right: 30px;
+  }
+
+  .footer-icons-paragraf {
+    margin-bottom: 20px;
+   
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    
+    color: var(--text-background);
+  }
+
+.ul-icons-footer {
+    margin: 0;
+    padding: 0;
+    display: flex;
+}
+
+
+  .li-icons-footer :hover,
+  .li-icons-footer :focus {
+    background-color: var(--brand-color);
+}
+
+.li-icons-footer  {
+margin-right: 10px;
+}
+
+.a-icons-footer {
+display: flex;
+    height: 44px;
+    width: 44px;
+    border-radius: 50%;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(255, 255, 255, 0.1);
+}
+
+
+  .icons-footer {
+    fill: var(--text-background);
+  }
+
+
 .web-color-footer {
  color: var(--brand-color);
 }
@@ -525,6 +581,8 @@ margin-right: 30px;
 .list-footer :focus {
     color: var(--brand-color);
 }
+
+
 
 
 
