--- a/icons/icomoon/style.css
+++ b/icons/icomoon/style.css
@@ -19,30 +19,30 @@ Single-colored icons can be modified like so:
   width: 1.3330078125em;
 }
 
-.icon-smartphone {
+.icon-martphone {
   width: 0.625em;
 }
 
 .icon-yaco {
-  width: 0.8720703125em;
+  width: 1.7666015625em;
 }
 
 .icon-company-tagline {
-  width: 0.76953125em;
+  width: 1.7666015625em;
 }
 
 .icon-company {
-  width: 1.0712890625em;
+  width: 1.7666015625em;
 }
 
 .icon-foster-peters-hover {
-  width: 2.0234375em;
+  width: 1.7666015625em;
 }
 
 .icon-company-tag-line {
-  width: 2.0888671875em;
+  width: 1.7666015625em;
 }
 
 .icon-brand {
-  width: 1.3408203125em;
+  width: 1.7666015625em;
 }
