--- a/css/styles.css
+++ b/css/styles.css
@@ -328,21 +328,33 @@ p {
     margin: 30px;
     margin-left: auto;
 }
-/* НЕ ПРАЦЮЄ 170822 */
-.section-about > .label-img-about {
+/* Added text with background to the What We Do section */
+
+.div-about {
+    position: relative;
+    }
+
+.label-img-about {
     position: absolute;
-    top: 0;
-    right: 0;
+    display: flex;
     margin: 0;
-    padding: 8px 16px;
-    border-bottom-left-radius: 4px;
-    weight: 700px;
-  
-    font-family: sans-serif;
-    font-size: 24px;
-    background-color: #2196f3;
-    color: #fff;
-  }
+    padding: 0;
+    bottom: 0px;
+    margin-left: 0;
+   
+    font-family: var(--main-fonts);
+    font-style: normal;
+    text-align: center;
+    justify-content: center;
+    width: 100%;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 70px;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: var(--text-background);
+    background-color: rgba(47, 48, 58, 0.8);
+      }
 
 
 
