--- a/css/styles.css
+++ b/css/styles.css
@@ -113,6 +113,11 @@ p {
 .web-color {
     color: var(--brand-color);
   }
+
+  .header-li:not(:last-child) {
+    margin-right: 50px;
+    }
+
 .header-list {
     text-decoration: none;
     font-family: 'Roboto';
@@ -123,12 +128,22 @@ p {
         padding-top: 32px;
         padding-bottom: 32px;
         display: block;
+        position: relative;
 }
 
-.header-li:not(:last-child) {
-    margin-right: 50px;
-}
 
+
+.current::after {
+   content:'';
+   background-color: var(--brand-color);
+   width: 100%;
+   height: 4px;
+   border-radius: 2px;
+   display: block;
+   position: absolute;
+   left: 0;
+   bottom: -1px;
+}
 
 .header-contact:first-child {
     margin-left: 0px;
