--- a/css/styles.css
+++ b/css/styles.css
@@ -837,6 +837,8 @@ transition: color var(--timing-function), background-color var(--timing-function
     height: 100%;
     transform: translateY(100%);
    transition: transform 300ms linear;
+   overflow: auto;
+   
 
 
  font-family: 'Roboto';
@@ -851,26 +853,50 @@ padding: 63px 24px;
 
   }
 
+  /*-------------------------------------------------- backdrop-------------------------------------------- */
+
+/* ________НЕ ПРАЦЮЄ 18082022__________ */
+
+
+  .backdrop {
+    position: fixed;
+width: 100%;
+height: 100%;
+left: 0px;
+top: 0px;
+    background-color: rgba(0, 0, 0, 0.2);
+  }
+
+  .modal-window {
+    position: absolute;
+    width: 528px;
+    min-height: 581px;
+    background-color: #FFFFFF;
+    border-radius: 4px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+  .modal-close {
+position: absolute;
+right: 8px;
+top: 8px;
+width: 30px;
+height: 30px;
+border: 1px solid;
+border-radius: 50%;
+  }
+  .is-hidden {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+  }
 
 
 
 
-  /* @keyframes transition {
-    0% {
-      background-color: teal;
-    }
   
-    50% {
-      background-color: orange;
-    }
-  
-    100% {
-      background-color: deepskyblue;
-    }
-  } */
-
-  
-
 
 
 
