--- a/css/styles.css
+++ b/css/styles.css
@@ -855,7 +855,7 @@ padding: 63px 24px;
 
   /*-------------------------------------------------- backdrop-------------------------------------------- */
 
-/* ________НЕ ПРАЦЮЄ 18082022__________ */
+
 
 
   .backdrop {
@@ -865,7 +865,8 @@ height: 100%;
 left: 0px;
 top: 0px;
     background-color: rgba(0, 0, 0, 0.2);
-  }
+    transition: opacity 750ms linear, visibility 750ms linear;
+      }
 
   .modal-window {
     position: absolute;
@@ -886,12 +887,18 @@ width: 30px;
 height: 30px;
 border: 1px solid;
 border-radius: 50%;
+display: flex;
+align-items: center;
+justify-content: center;
+border-color: rgba(0, 0, 0, 0.1);
   }
+
   .is-hidden {
     opacity: 0;
     visibility: hidden;
     pointer-events: none;
   }
+  
 
 
 
