--- a/css/styles.css
+++ b/css/styles.css
@@ -453,14 +453,10 @@ margin-right: 10px;
     fill: #AFB1B8;
    background-color: #FFFFFF;
    transition: background-color var(--timing-function), fill var(--timing-function);
-   
-        }
+           }
 
-
-/* чомусь svg вибиває transition, тобто коли на svg навести курсор
- вона спрацьовує без переходу */
-        .li-icons-team :hover,
-        .li-icons-team :focus {
+        .icons-team:hover,
+        .icons-team:focus {
             fill: #FFFFFF;
             background-color: var(--brand-color);
         }
@@ -502,7 +498,7 @@ margin-right: 30px;
 
 
    .a-permanent-clients {
-    fill: var(--accent-color);
+    fill: #AFB1B8;
    width: 100%;
    height: 100%;
    display: flex;
@@ -513,28 +509,21 @@ margin-right: 30px;
  width: 170px;
 height: 92px;
 transition: border-color var(--timing-function);
+transition: fill var(--timing-function);
 
      }
 
    .a-permanent-clients:hover,
    .a-permanent-clients:focus {
     border-color: var(--brand-color);
-    
-   }
+   fill: var(--brand-color);
+       }
 
    .svg-permanent-clients {
     width: 106px;
     height: 60px;
-    fill: #AFB1B8;
-    transition: fill var(--timing-function);
-       }
-       .svg-permanent-clients:hover,
-       .svg-permanent-clients:focus {
-        fill: var(--brand-color);
-
-       }
-
-
+           }
+       
   
 /* footer */
 .footer{
@@ -547,9 +536,8 @@ transition: border-color var(--timing-function);
     align-items: baseline;
   }
 
-  .box-footer {
-    width: 270px;
-   margin-right: 70px;
+  .box-footer-address {
+     margin-right: 70px;
   }
 
   .footer-icons-paragraf {
@@ -687,7 +675,7 @@ margin-bottom: 94px;
    color: var(--brand-color);
 }
 
-.header-container {
+.header {
     border-bottom: 1px solid #E5E5E5;    
   
 }
@@ -717,6 +705,7 @@ font-family: 'Roboto';
     display: flex;
     margin: 0;
     padding: 0;
+    margin-bottom: 50px;
      }
   .button{
     font-family: 'Roboto';
@@ -727,25 +716,25 @@ font-family: 'Roboto';
         text-align: center;
         letter-spacing: 0.03em;
         color: var(--header-color);
-        cursor: pointer;
         display: flex;
         justify-content: center;
-        
-     
-        
-  }
+      }
+
+      .li-button-filters {
+        margin-right: 8px; 
+      }
 
 .button-filters {
     font-family: inherit;
     border: none;
-    margin-right: 8px; 
     border-radius: 4px;
     text-indent: inherit;
     padding: 6px 22px;
-    margin-bottom: 50px;
     font-size: 16px;
 line-height: 26px;
 letter-spacing: 0.03em;
+background-color: #F5F4FA;
+cursor: pointer;
 transition: color var(--timing-function), background-color var(--timing-function),  box-shadow var(--timing-function) ;
        }
     
@@ -820,7 +809,7 @@ transition: color var(--timing-function), background-color var(--timing-function
         
   }
 
-.li-project:hover .text-project {
+.a-project:hover .text-project {
     transform: translateY(0%);
 }
 
@@ -839,8 +828,6 @@ transition: color var(--timing-function), background-color var(--timing-function
    transition: transform 300ms linear;
    overflow: auto;
    
-
-
  font-family: 'Roboto';
 font-style: normal;
 font-weight: 400;
@@ -850,7 +837,6 @@ letter-spacing: 0.03em;
 color: #FFFFFF;
 background-color: rgba(33, 150, 243, 0.9);
 padding: 63px 24px;
-
   }
 
   /*-------------------------------------------------- backdrop-------------------------------------------- */
@@ -891,6 +877,7 @@ display: flex;
 align-items: center;
 justify-content: center;
 border-color: rgba(0, 0, 0, 0.1);
+cursor: pointer;
   }
 
   .is-hidden {
